[tool.poetry]
name = "demo-guardrails"
version = "0.1.0"
description = ""
authors = ["Brancen Gregory <brancengregory@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
guardrails-ai = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
